--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,19 @@
 {
-    "name": "オナチンコ",
-    "short_name": "PWA",
-    "background_color": "#000000",
-    "icons": [{
-        "src": "/pwa_test/img/icon.png",
-        "sizes": "256x256",
-        "type": "image/png"
-      }],
-    "start_url": "/pwa_test/",
-    "scope": "/pwa_test/",
-    "display": "standalone"
-  }
-  
+  "name": "オナチンコ",
+  "icons": [
+    {
+      "src": "./img/color-name-icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "./img/color-name-icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ],
+  "start_url": "./index.html",
+  "display": "standalone",
+  "background_color": "#FFFFFF",
+  "theme_color": "#4e342e"
+}
