--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,13 @@
 {
   "name": "オナチンコ",
   "icons": [
-    {
-      "src": ".color-name-icon-192x192.png",
+      {
+      "src": "./img/color-name-icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": ".color-name-icon-512x512.png",
+      "src": "./img/color-name-icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
